# func_wander

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.txt  fsc.cpp  fsc.h  main.cpp  node.cpp  node.h
.github/workflows/: ci.yml
examples/: CMakeLists.txt
examples/func_wander_alaw/: CMakeLists.txt  atom_samples.h  main.cpp  target_sample.h
scripts/docker/: docker-compose.yml
scripts/docker/linux/: entrypoint.sh
src/: CMakeLists.txt
src/func_wander/: CMakeLists.txt
src/func_wander/include/: atom.h  best_functions.h  common.h  comparison.h  func_node.h  interaction_cli.h  interaction_http.h  search_task.h  status.h  target.h
tests/unittest/: CMakeLists.txt  atom_samples.h  main.cpp
